2016-10-14  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py (MainApp.__createButtons): Set pause button as
	disabled at start and enable it after algorithm started.
	(MainApp.startAlgorithm): Add stop mechanism.

2016-10-12  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py (MainApp): Add save function to export to PNG
	and SVG.
	(MainApp.__init__): Change default size in order to not have
	useless space.

	* gui/widgets.py: Add ExportDialog class for creating a custom
	save file dialog.

2016-10-11  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py: Move import to the head of the file.
	(MainApp): Moved buttons to __createButtons method.
	Add Pause toggle button with basic functionality.
	(MainApp.__onExportClicked): Add basic save dialog.
	(MainApp.__init__): Add member to define if algorithm is running.
	(MainApp.__onPauseToggled): Add pause for algorithm execution.

2016-10-07  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py (MainApp.__createInputs): Add exception for
	handling problems with the image.

2016-10-03  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/mainWindow.py (MainApp.step): Add exception handler for
	errors in the algorithm.

2016-09-30  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* README.md: Add information about the fork and the developed GUI.

	* gui/mainWindow.py (MainApp.setFractures): Add execution of the
	algorithm.
	(MainApp.step): Move the execution to its own function to run when idle.
	(MainApp.__init__): Add connect that allows results to be displayed.
	(MainApp.stoppedAlgorithm): Now fields are reenabled after
	execution and spinner is stopped.

2016-09-29  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>

	* gui/widgets.py (NumberEntry): Add cast to float and int.

	* gui/mainWindow.py (MainApp): Add expose function for drawing the
	canvas.